src/scss/main.scss
@import 'mixins';

$sans: 'Open Sans Bold', 'Open Sans', Helvetica, Arial, sans-serif;
$serif: 'Noto Serif', serif;
$link-color: #158;
$dark: #666;

// Icon font for link-out sidebar
@font-face {
  font-family: 'fontello';
  src: url('../fonts/fontello.eot?27200950');
  src: url('../fonts/fontello.eot?27200950#iefix') format('embedded-opentype'),
       url('../fonts/fontello.woff?27200950') format('woff'),
       url('../fonts/fontello.ttf?27200950') format('truetype'),
       url('../fonts/fontello.svg?27200950#fontello') format('svg');
  font-weight: normal;
  font-style: normal;
}

@keyframes throb {
  from {
    transform: scaleX(1);
  }
  
  to {
    transform: scaleX(1.2);
  }
}

@keyframes throb-flipped {
  from {
    transform: scaleX(-1);
  }

  to {
    transform: scaleX(-1.2);
  }
}

@keyframes pipe-dance {
  from {
    background-position: 0 0;
  }

  to {
    background-position: -175px 217px;
  }
}

@keyframes ken-burns-acid-test {
  0% {
    background-size: 300px;
  }

  25% {
    background-size: 800px;
  }

  50% {
    background-position-y: -100%;
    background-size: 300px;
  }

  75% {
    background-position-x: 100%;
    background-size: 300px;
  }

  100% {
    background-position-x: -50%;
    background-size: 150px;
  }
}

// Nicholas Gallagher's clearfix
%clearfix {
  &:before,
  &:after {
    content: ' '; // 1
    display: table; // 2
  }

  &:after {
    clear: both;
  }
}


// Fix the box model
* {
  box-sizing: border-box;
}

html,
body {
  margin: 0;
  min-height: 100%;
  padding: 0;
}

body {
  text-size-adjust: 100%;
  background: #ab8771 url('../img/pipetile.png');
  color: #080f17;
  cursor: pointer;
  font-family: $serif;

  &.sickening {
    animation-name: pipe-dance;
    animation-duration: 1s;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
  }

  &.annoying {
    background-size: 200px;
    animation-timing-function: ease-in;
    animation-duration: 9s;
    animation-name: ken-burns-acid-test;
    animation-direction: alternate;
    animation-iteration-count: infinite;
    background: #000 url('../img/unicorn-glitch.gif');
    background-attachment: fixed;
    background-position: -75%;
  }
}

.image-credit {
  opacity: 1;
  transition: transform 3s, opacity 1s;
  transform-origin: bottom left;
  bottom: 10px;
  color: #fff;
  font-size: .6em;
  left: 10px;
  position: fixed;
  text-shadow: 1px 1px #000;

  a {
    color: #f58fff;
  }

  &.hidden {
    translate: -100px, 100px;
    opacity: 0;
  }

  .expand-link {
    display: block;
    font-size: 7em;
    transition: all 3s;
    &:hover {
      color: #fff;
    }
  }
}

.hugely-annoying {
  .expand-link {
    transform: scaleX(-1);
  }

  .image-credit {
    transform: scale(2);
  }

  #container {
    transform: translate3d(1000px, 0, 0);
    background-color: rgba(255, 255, 255, 0);
  }

  section,
  canvas {
    opacity: 0;
  }

}

#container,
#content {
  min-height: 100%;
}

#container {
  @extend %clearfix;
  transition: all 3s;
  @include breakpoint(mobile) {
    margin: 0;
  }

  background-color: #fff;
  cursor: auto;
  margin-left: 15%;
  overflow: hidden;

  a {
    color: $link-color;
    text-decoration: none;

    &:hover {
      background: $dark;
      color: #fff;
      margin: -2px -5px;
      padding: 2px 5px;
      text-shadow: none;
    }
  }
}

#content {
  padding: 56px 66px 0;
  position: relative;
}

.icon {
  font-family: fontello;
  text-decoration: none;
}

.no-icon {
  font-size: 12px;
}

footer {
  clear: both;
  color: $dark;
  font-size: .8em;
  margin-bottom: 80px;
}

.view-source {
  display: inline-block;
  transform: scaleX(0.8);
}

// *Headings*
h1,
h2,
h3 {
  display: inline-block;
  font-family: $sans;
  font-weight: bold;

  a {
    display: inline-block;
  }
}

h1 {
  font-size: 1.7em;
}

h2 {
  font-size: 1.2em;
}

h3 {
  font-size: 1.4em;
  margin-bottom: 0;
  margin-right: 10px;
}

.tag {
  background: $dark;
  color: #fff;
  display: inline-block;
  font-family: $sans;
  font-size: .6em;
  opacity: .5;
  padding: 0 5px 1px 6px;
  text-transform: uppercase;
  transition: opacity .5s, transform .5s;

  .project:hover & {
    opacity: 1;
  }
}


// *Sections*
section {
  clear: both;
  padding: 70px 0;

  &:last-of-type {
    padding-bottom: 140px;
  }

  transition: opacity 3s;

  @include breakpoint(mobile) {
    padding: 20px 0;
  }
}

.lost-to-sands-of-time {
  text-decoration: line-through;
  h3 {
    text-decoration: line-through;
  }
}

figure {
  transition: opacity 2s;
  height: 200px;
  opacity: 0;
  position: absolute;
  right: 20px;
  
  // this will get overridden via JS:
  top: -1000px;

  visibility: hidden;
  width: 200px;

  z-index: 3;

  > img {
    border: 75px double #2e1404;
    border-radius: 50%;
    margin: 25px;
    position: relative;
    width: 100%;
    z-index: 2;
    filter: grayscale(100%);
    transition: all 3s ease-in;

    .active & {
      filter: grayscale(0%);
      border-width: 0;

      &.square {
        border-radius: 0;
      }
    }
  }

  @include breakpoint(narrow) {
    float: left;
    height: auto;
    opacity: 1;
    position: relative;
    top: auto !important;
    visibility: visible;
    width: 30%;

    img {
      border: 0;
      margin: 0;
    }
  }

  @include breakpoint(mobile) {
    display: block;
    float: right;
    height: auto;
    opacity: 1;
    position: relative;
    top: auto !important;
    visibility: visible;
    width: 30%;

    > img {
      border: 0;
      margin: 0;
    }
  }
}

.active figure {
  opacity: 1;
  visibility: visible;
}

.animated-like-button {
  bottom: 0;
  height: 18px;
  right: 3%;
  position: absolute;
  width: 68px;
  z-index: 200;
  opacity: 0;
  transition: opacity 2s;

  .active & {
    opacity: 1;
  }
}

.photo {
  .smiling {
    display: none;
  }
  .animated-like-button {
    transition: all 1s;
  }
  &:hover {
    .smiling {
      display: inline;
    }
    .normal {
      display: none;
    }
    .animated-like-button {
      transform: translateY(-150px) translateX(-150px) translateZ(0) scale(2.0) rotate(120deg);
    }
  }
}

// Make Like button behave when transformed
.fb_iframe_widget {
  span {
    height: 100% !important;
    width: 100% !important;
  }

  iframe {
    position: static !important;
  }
}

#unicorn {
  height: 68px;
  left: 0;
  position: absolute;
  top: 0;
  width: 120px;
  z-index: 4;
 
  opacity: 1;
  transform: translate3d(0, 0, 0);
  transition: filter 3s, opacity 5s;

  @include breakpoint(narrow) {
    display: none;
  }

  @include breakpoint(mobile) {
    display: none;
  }

  &.journey-started {
    transition: none;
  }

  &.journey-completed {
    filter: blur(10px);
    opacity: 0;
  }

  &::selection,
  &::-moz-selection {
    background: transparent;
  }
}

@include breakpoint(mobile) {
  #top,
  aside {
    float: left;
  }

  #top {
    margin-bottom: 17px;
  }

  #content {
    padding: 10px 20px;
  }
}

#top h1 {
  @extend %clearfix;
  background: #ab8771;
  color: #fff;
  margin: 0;
  padding: 3px 6px 4px;
  position: fixed;
  right: 10px;
  text-align: right;
  top: 22px;
  transform: translate(0, 0) rotate(9deg);
  transition: transform 3s;
  width: 162px;

  @include breakpoint(mobile) {
    margin-right: 20px;
    position: static;
    transform: none;
  }

  @include breakpoint(narrow) {
    text-align: center;
    width: 1.5em;
  }

  .wf-loading & {
    visibility: hidden;
    transform: translate(0, -160px) rotate(-50deg);
  }
}

.project {
  margin: 40px 0;
}

#sidebar {
  font-size: 2em;
  position: fixed;
  right: 10px;
  text-align: center;
  top: 120px;
  transform: scale(1) rotate(0deg);
  transition: transform 3s;
  width: 3em;
  z-index: 10;


  .wf-loading & {
    transform: scale(0) rotate(-180deg);
  }

  @include breakpoint(mobile) {
    margin-top: 20px;
    position: static;
    width: auto;
  }

  @include breakpoint(narrow) {
    font-size: 1.5em;
    width: 1.5em;
  }

  .icon {
    text-shadow: 0;

    &:hover {
      color: #fff;
    }
  }
}

.project,
section {
  p,
  header {
    max-width: 424px;
  }
}

#top span {
  display: block;
  float: left;

  // Only display initials of name when view is narrow
  @include breakpoint(narrow) {
    font-size: 0;

    &::first-letter {
      font-size: 20px;
    }
  }

}

.comic-sans,
.comic-sans * {
  font-family: "Comic Sans MS", "Comic Sans", Arial, Verdana, sans-serif !important;
}

canvas {
  transition: opacity 5s;
  z-index: 1;
}

h1,
h2,
h3,
p,
.tag {
  transition: opacity 2s; 
  opacity: 1;
  position: relative;
  z-index: 2;

  // handle webfont FOUC
  .wf-loading & {
    opacity: 0;
    visibility: hidden;
  }
}

